# rivet-rust

./: .gitignore  Cargo.toml  README.md  build.rs
src/: hera.rs  hilbert_distance.rs  lib.rs  matching_distance.rs  rivet.rs
