[package]
name = "rivet-rust"
version = "0.1.0"
authors = ["Bryn Keller <bryn.keller@intel.com>"]
build = "build.rs"
edition = "2018"

[features]
hera=[]

[profile.release]
debug = true

[dependencies]
csv = "0.15"
rand = "0.3"
failure = "0.1.5"
flexi_logger = "0.6"
itertools = "0.7"
libc = "0.2.0"
log = "0.3"
ndarray = { git = "https://github.com/xoltar/ndarray" , branch = "more-literal", features = ["serde-1"] }
noisy_float = {version = "0.1.8", features = ["serde-1"] }
num-iter = "0.1.37"
num-integer = "0.1.39"
num-traits = "0.1.37"
num-rational = {version = "0.2", features = ["serde"]}
serde = "1.0"
serde_derive = "1.0"
tempdir = "0.3.7"
tiny-keccak = "1.4.2"